test/typeerrors/ex1.golden
Building file ../test/typeerrors/ex1.act
  Compiling ex1.act for release

ERROR: Error when compiling ex1 module: Type error

  |
4 |a = f(3)
  |    ^^^^
Too few positional elements

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

